# spatial_data_management_with_duckdb

./: README.md  pyproject.toml
